src/test/fail/basic_syntax/function_redeclaration.lly
#[
SyntaxError: f has already been declared.
Where: File "function_redeclaration.lly" at line 6
]#

define f() {} define f() {}
